﻿			     BZFlag Release Notes
			     ====================

BZFlag 2.0.3
------------

* Fixed Linux name resolution (server list) problem - Sean Morrison
* Fixed Jitter problem on Windows, clock was wrong - Alfredo Tupone
* Windows platform can switch from SDL to native - Alfredo Tupone
* Instruction for X-build from linux to windows - Alfredo Tupone
* bzflag is much less blocking with libcurl - Alfredo Tupone
* Using c-ares instead of adns for DNS resolving - Alfredo Tupone
* Added CTF capture event trigger for world weapons - Jeff Myers, Nathan Goings
* FlipZ on meshpyrs behaves as expected (like pyramids) - Daniel Remenak
* Fixed /set and /reset command case bug - Daniel Remenak
* Fixed crash on /ban without -banfile - Daniel Remenak
* Shot reload timer on the HUD - Daniel Remenak
* Added timestamp to bzfs DEBUG output, and new CL option (-ts) - Mark Thomas
* Players without TALK can send to the Admin group - Sean Morrison
* Fixed bzfs crash because poll kick/ban - Julio Jimenez
* Allow additional group modify permission lines - Frank Evers
* bzfs creates default groups before parsing groupdb file - Frank Evers
* +ALL and -ALL adds/removes all perms froma a group in groupdb - Frank Evers
* Support for +,- and ! operators in bzfs' groupdb file - Frank Evers

BZFlag 2.0.2  "Queen of Maybe" (2005-03-18)
-------------------------------------------

* Added TALK, MUTE, UNMUTE permissions - Angelina Carlton
* Added /mute, /unmute commands - Angelina Carlton
* Automatic team try to fix bad player behaviour - Alfredo Tupone
* bzadmin does not require opengl headers - Alfredo Tupone
* bzfs handle both -mp specification - Alfredo Tupone
* bzfs correctly handles ban time - Alfredo Tupone, Julio Jimenez
* bzfs no more put jittered players as Not Responding - Alfredo Tupone
* bzfs stop shot from dead player - Alfredo Tupone
* Roaming switching between player goes even on Dead Player - Alfredo Tupone
* Fixed bzfs crash associated to "Error adding player" - Alfredo Tupone